# Simple-controller

data/: .16.asf.swp  16.actor  16_27_left_turn.amc  16_33_slow_stop.amc  16_55_run.amc  base.amc
src/: CMakeCache.txt  CMakeLists.txt  Controller.cpp  Makefile  RawDatabase.cpp  RawDatabase.h  a.out  cmake_install.cmake
